--- a/package.json
+++ b/package.json
@@ -7,24 +7,29 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod CoVidSpeech && ng build --prod collect && firebase deploy --only hosting:base,hosting:collect"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.3",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.1.3",
     "@angular/compiler": "~8.1.3",
     "@angular/core": "~8.1.3",
+    "@angular/flex-layout": "~8.0.0-beta.27",
     "@angular/forms": "~8.1.3",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
+    "firebase": "^7.9.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.3",
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "~8.1.3",
     "@angular/compiler-cli": "~8.1.3",
     "@angular/language-service": "~8.1.3",
