[collect] Added login as guest with meta data template

--- a/angular.json
+++ b/angular.json
@@ -47,6 +47,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.less"
             ],
             "scripts": []
@@ -141,6 +142,7 @@
               "projects/test/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/test/src/styles.less"
             ],
             "scripts": []
@@ -235,6 +237,7 @@
               "projects/collect/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/collect/src/styles.less"
             ],
             "scripts": []
@@ -284,6 +287,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "CoVidSpeech"
 }
