--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod CoVidSpeech && ng build --prod collect && firebase deploy --only hosting:base,hosting:collect"
+    "deploy": "ng build --prod CoVidSpeech && ng build --prod collect && firebase deploy --only hosting:base,hosting:collect",
+    "deploy-collect": "ng build --prod collect && firebase deploy --only hosting:collect"
   },
   "private": true,
   "dependencies": {
