--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "firebase": "^7.9.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "recordrtc": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.25",
