--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/custom-theme.scss",
               "src/styles.less"
             ],
             "scripts": []
@@ -142,7 +142,7 @@
               "projects/test/src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/custom-theme.scss",
               "projects/test/src/styles.less"
             ],
             "scripts": []
@@ -237,7 +237,7 @@
               "projects/collect/src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/custom-theme.scss",
               "projects/collect/src/styles.less"
             ],
             "scripts": []
