--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "ng build --prod CoVidSpeech && ng build --prod collect && firebase deploy --only hosting:base,hosting:collect",
+    "deploy-base": "ng build --prod CoVidSpeech && firebase deploy --only hosting:base",
     "deploy-collect": "ng build --prod collect && firebase deploy --only hosting:collect"
   },
   "private": true,
