[webpage, collect] Updated webpage and some collect app fixes

--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,10 @@
     ],
     "rewrites": [
       {
+        "source": "google2b23ded11c58555f.html",
+        "destination": "/assets/google2b23ded11c58555f.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
