--- a/angular.json
+++ b/angular.json
@@ -44,7 +44,8 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/google2b23ded11c58555f.html"
             ],
             "styles": [
               "src/custom-theme.scss",
