--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "co-vid-speech",
-  "version": "0.0.0",
+  "name": "project-prana",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
