--- a/firebase.json
+++ b/firebase.json
@@ -39,6 +39,20 @@
       }
     ]
   },{
+    "target": "collect-dev",
+    "public": "dist/collect",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },{
     "target": "test",
     "public": "dist/test",
     "ignore": [
