--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,8 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.less"
+              "src/styles.less",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
@@ -240,7 +241,8 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "projects/collect/src/styles.less"
+              "projects/collect/src/styles.less",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
