--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
     "recordrtc": "^5.5.9",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "~8.1.3",
     "@angular/compiler-cli": "~8.1.3",
     "@angular/language-service": "~8.1.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
