--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "recordrtc": "^5.5.9",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "wavesurfer.js": "^4.0.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular-devkit/build-angular": "^0.803.29",
     "@angular/cli": "~8.1.3",
     "@angular/compiler-cli": "~8.1.3",
     "@angular/language-service": "~8.1.3",
