--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "recordrtc": "^5.5.9",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "wavesurfer.js": "^4.0.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
