Update Github CI to deploy to dev website

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master_v2 ]
+    branches: [ score_ui ]
   pull_request:
-    branches: [ master_v2 ]
+    branches: [ score_ui ]
 
 jobs:
   build:
@@ -26,9 +26,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g firebase-tools
     - run: npm ci
-    - run: npm run build
     - run: npm run build collect
-    - name: Deploy to Firebase
+    - name: Deploy to Firebase dev website
       env:
         COSWARA_FIREBASE_TOKEN: ${{ secrets.COSWARA_FIREBASE_TOKEN }}
-      run: firebase deploy --token $COSWARA_FIREBASE_TOKEN --non-interactive --only hosting:base,hosting:collect
+      run: firebase deploy --token $COSWARA_FIREBASE_TOKEN --non-interactive --only hosting:collect-dev
